appId: io.sentry.sample.iOS-Swift
env:
  MAESTRO_FLOW_NAME: "Check Frames Proportions"
---
- launchApp
- tapOn: "Extra"
- tapOn: "Frames Count"
- assertVisible: "Frames Count OK"
